force-app/main/default/objects/GSA_Period__c/GSA_Period__c.object-meta.xml
<CustomObject>
    <label>GSA Period</label>
    <nameField>
        <label>GSA Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSA Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>