force-app/main/default/objects/GSA_Period__c/fields/Calendar_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Quarter__c</fullName>
    <label>Calendar Quarter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>