force-app/main/default/objects/GSA_Period__c/fields/Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year__c</fullName>
    <label>Calendar Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>