force-app/main/default/objects/GSA_Period__c/fields/Contract_Year__c.field-meta.xml
<CustomField>
    <fullName>Contract_Year__c</fullName>
    <label>Contract Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>OY 1</fullName>
            </value>
            <value>
                <fullName>OY 2</fullName>
            </value>
            <value>
                <fullName>OY 3</fullName>
            </value>
            <value>
                <fullName>OY 4</fullName>
            </value>
            <value>
                <fullName>Invalid date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>