force-app/main/default/objects/GSA_Period__c/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <label>Fiscal Quarter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>