force-app/main/default/objects/GSA_Period__c/fields/Govt_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Govt_Quarter__c</fullName>
    <label>Govt Quarter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>