force-app/main/default/objects/GSA_Period__c/fields/Govt_Year__c.field-meta.xml
<CustomField>
    <fullName>Govt_Year__c</fullName>
    <label>Govt Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>