force-app/main/default/objects/GSA_Period__c/fields/IsHoliday__c.field-meta.xml
<CustomField>
    <fullName>IsHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHoliday</label>
    <type>Checkbox</type>
</CustomField>