force-app/main/default/objects/GSA_Period__c/fields/IsWeekend__c.field-meta.xml
<CustomField>
    <fullName>IsWeekend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWeekend</label>
    <type>Checkbox</type>
</CustomField>