force-app/main/default/objects/GSA_Period__c/fields/Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Month_Day__c</fullName>
    <label>Month Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>