force-app/main/default/objects/GSA_Period__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>