force-app/main/default/objects/GSA_Period__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <label>Week Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>